# DentaScribe

./: .env.example  .gitignore  BATCH_1_README.md  BATCH_2_README.md  BATCH_3_README.md  BATCH_4_README.md  BATCH_5_README.md  BATCH_6_README.md  CLAUDE.md  CURSOR_INSTRUCTIONS.md  EXECUTIVE_BRIEF.md  HANDOFF.md  README.md  app.py  app_v2.py  pyproject.toml  requirements.txt  streamlit_app.py
.claude/: settings.local.json
.runtime/: kb_embeddings_de6d604256a0.npz
.streamlit/: config.toml
agents/: __init__.py  base.py  cdt_coder.py  clinical_agents.py  coach_agent.py  compliance_agent.py  dental_ner.py  diarization.py  knowledge.py  orchestrator.py  second_opinion_agent.py  soap_note.py  swarm.py  transcription.py  validator.py
audio/: deepgram_stt.py  diarization.py  live_streaming.py  post_correction.py  transcript_types.py  tts_synthesis.py
core/: config.py  cost.py  db.py  glossary_loader.py  llm_client.py  soap_schema.py  soap_validator.py  state.py
data/: cdt_allow_list.json  cdt_codes_2026.json  dental_glossary.json  dental_knowledge.json  dental_terms.json  sample_emergency_endo_transcript.txt  sample_filled_soap_emergency_endo.json  soap_schema.json  surface_norm.py  texas_blank_soap_template.json  tooth_norm.py  visit_type_templates.json
eval/: __init__.py  __main__.py  ground_truth.py  metrics.py  runner.py  schema.py  soap_validator_smoke.py  stt_smoke.py
exporters/: docx_export.py  pdf_export.py
exports/: soap_docx_template.py  soap_pdf_template.py
prompts/: clinical_prompts.py  soap_prompt.py
storage/: db.py  retention.py
ui/: styles.py  (+2 more)
(+33 files in other folders)
