[project]
name = "dentascribe"
version = "0.1.0"
description = "AI dental scribe MVP for the Dallas, Texas market"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "DentaScribe"}]
dependencies = [
    "streamlit>=1.36",
    "anthropic>=0.40",
    "deepgram-sdk>=3.7",
    "jsonschema>=4.22",
    "pydantic>=2.7",
    "python-docx>=1.1",
    "reportlab>=4.2",
    "pydub>=0.25",
    "python-dotenv>=1.0",
    "requests>=2.32",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
